--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -16,4 +16,11 @@
         font-size: 16px;
         line-height: 25px;
     }
+    &_submit {
+        width: 100%;
+        height: 58px;
+        font-weight: 500;
+        font-size: 16px;
+        line-height: 25px;
+    }
 }
