--- a/src/sass/blocks/_carousel.scss
+++ b/src/sass/blocks/_carousel.scss
@@ -5,7 +5,7 @@
         margin: 0 auto;
         position: relative;
     }
-    .prev, .next {
+    .slick-prev, .slick-next {
         position: absolute;
         border: none;
         top: 50%;
@@ -17,7 +17,7 @@
             height: 50px;
         }
     }
-    .next {
+    .slick-next {
         right: -66px;
         left: auto;
     }
