--- a/src/sass/blocks/_catalog.scss
+++ b/src/sass/blocks/_catalog.scss
@@ -39,7 +39,7 @@
     &__content {
         margin-top: 60px;
         display: none;
-        justify-content: space-between;
+        justify-content: space-around;
         flex-wrap: wrap;
         &_active {
             display: flex;
@@ -119,51 +119,50 @@
         }
         &__content {
             width: 50%;
-            margin-right: 20px;
+            margin-right: 40px;
             transform: translateX(calc(-100% - 40px));
             transition: 0.5s all;
             &_active {
                 transform: translateX(0%);
-                // margin-right: 20px;
             }
         }
         &__list {
             position: relative;
             width: 50%;
-            margin-left: 40px;
             transform: translateX(0%);
-            padding-right: 20px;
             transition: 0.5s all;
-            padding-left: 19px;
-            margin-bottom: 0;
-            list-style-type: none;
+            margin-bottom: 0;          
             &_active {
                 transform: translateX(calc(-100% - 40px));
-                // margin-left: 0;
             }
-            li {
-                position: relative;
-                font-weight: 300;
-                font-size: 14px;
-                line-height: 21px;
-                color: #555555;
-                margin-bottom: 20px;
-                &:before {
-                    content: '';
-                    position: absolute;
-                    width: 5px;
-                    height: 5px;
-                    background-color: $main-color;
-                    left: -14px;
-                    top: 7px;
+            &-content {
+                list-style-type: none;
+                padding-left: 10px;
+                li {
+                    position: relative;
+                    font-weight: 300;
+                    font-size: 14px;
+                    line-height: 21px;
+                    color: #555555;
+                    margin-bottom: 20px;
+                    &:before {
+                        content: '';
+                        position: absolute;
+                        width: 5px;
+                        height: 5px;
+                        background-color: $main-color;
+                        left: -14px;
+                        top: 7px;
+                    }
                 }
             }
+            
         }
         &__back {
             position: absolute;
             bottom: 0;
             left: 50%;
-            transform: translateX(calc(-50% - 19px));
+            transform: translateX(-50%);
             display: block;
             font-weight: 500;
             font-size: 14px;
